# gh_labels

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  environment.yml  labels.py  labels.toml  pyproject.toml  requirements.txt
examples/: labels.toml
labelsync/: __init__.py  cli.py  logger_setup.py  sync.py
tests/: test_parsing.py
